--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <p>Currently in a boot camp decided to go into tech just because i enjoy it a lot.</p>
             <p>I love learning and love to spend as much time trying to figure everything out!</p>
             <p>I would describe myself as a excellent problem solver i Currently work for Swagelok</p>
-            <P>as a machine opperator </P>
+            <P>as a machine operator where you have to be a keen problem solver because measurements change all the time </P>
+               <p>and you have to figure out what is the problem</p>
             </section>
                 <section class="divider"> 
                     <hr class="rounded">
