--- a/MyProjects.html
+++ b/MyProjects.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a class="nav" href="index.html">Home</a></li>
                     <li><a href="index.html">About Me</a></li>
-                    <li><a href="contactinfo.html">Contact Info</a></li>
+                    <li><a href="contactInfo.html">Contact Info</a></li>
                     <li><a href="MyProjects.html">Projects</a></li>
                     
                     
@@ -30,7 +30,7 @@
    
 <div class="row">
     <div class="column">
-        <a class="links" href="https://github.com/2022-April-Java-PT-Classroom/virtual-pet-VictorLNegron" target="_blank">VirtualPet</a>
+        <a class="links" href="./Images/VirtualPet.jpg" target="_blank">VirtualPet</a>
       <img src="/VictorLNegron.github.io/Images/VirtualPet.jpg" alt="VirtualPet" style="width:100%">
       <p>Designed console application that lets users create and interact with their own VirtualPets.</p>
         <p>On this project we had to feed , water , play with the pet.</p>
@@ -40,7 +40,7 @@
     </div>
     <div class="column">
         <a class="links" href="https://github.com/2022-April-Java-PT-Classroom/virtual-pet-shelter-VictorLNegron" target="_blank">VirtualPetShelter</a>
-      <img src="/VictorLNegron.github.io/Images/VirtualPetShelter.jpg" alt="VirtualPetShelter" style="width:100%">
+      <img src="./Images/VirtualPetShelter.jpg" alt="VirtualPetShelter" style="width:100%">
       <p>Designed console application that lets users create and interact with their own PetShelter.</p>
       <p>This application we had to take what we learned and kick it up a notch.</p>
       <p>Your in charge of a shelter you have to be able to admit pets let people adopt plus be able to feed and water and play with individual pets!</p>
@@ -50,7 +50,7 @@
     </div>
     <div class="column">
         <a class="links" href="https://github.com/2022-April-Java-PT-Classroom/virtual-pet-amok-VictorLNegron" target="_blank">VirtualPetAmok</a>
-      <img src="/VictorLNegron.github.io/Images/VirtualPetAmok.jpg" alt="VirtualPetAmok" style="width:100%">
+      <img src="./Images/VirtualPetAmok.jpg" alt="VirtualPetAmok" style="width:100%">
       <p>Designed console application that lets users create and interact with their own PetShelter that houses robot pets and organic pets!</p>
     <p>This application you were introduced to ROBOT PETS!!! now included with maintness and oillevels fun for everyone!</p>
     <p>you have to make it so you cant! feed robot pets or water them as there robots and they dont require that!</p>
