--- a/MyProjects.html
+++ b/MyProjects.html
@@ -30,8 +30,8 @@
    
 <div class="row">
     <div class="column">
-        <a class="links" href="./Images/VirtualPet.jpg" target="_blank">VirtualPet</a>
-      <img src="/VictorLNegron.github.io/Images/VirtualPet.jpg" alt="VirtualPet" style="width:100%">
+        <a class="links" href="https://github.com/2022-April-Java-PT-Classroom/virtual-pet-VictorLNegron" target="_blank">VirtualPet</a>
+      <img src="VirtualPet.jpg" alt="VirtualPet" style="width:100%">
       <p>Designed console application that lets users create and interact with their own VirtualPets.</p>
         <p>On this project we had to feed , water , play with the pet.</p>
         <hr>
