--- a/MyProjects.html
+++ b/MyProjects.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a class="nav" href="index.html">Home</a></li>
                     <li><a href="index.html">About Me</a></li>
-                    <li><a href="contactInfo.html">Contact Info</a></li>
+                    <li><a href="contact.html">Contact Info</a></li>
                     <li><a href="MyProjects.html">Projects</a></li>
                     
                     
@@ -31,7 +31,7 @@
 <div class="row">
     <div class="column">
         <a class="links" href="https://github.com/2022-April-Java-PT-Classroom/virtual-pet-VictorLNegron" target="_blank">VirtualPet</a>
-      <img src="VirtualPet.jpg" alt="VirtualPet" style="width:100%">
+      <img src="./Images/vPet.jpg" alt="VirtualPet" style="width:100%">
       <p>Designed console application that lets users create and interact with their own VirtualPets.</p>
         <p>On this project we had to feed , water , play with the pet.</p>
         <hr>
