--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a class="nav" href="#">Home</a></li>
                     <li><a href="#about">About Me</a></li>
-                    <li><a href="contactInfo.html">Contact Info</a></li>
+                    <li><a href="contact.html">Contact Info</a></li>
                     <li><a href="MyProjects.html">Projects</a></li>
                     
                     
