--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<form method="post" action="mailto:Negronvictor882@gmail.com">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
