--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Victor L Negron</a>
+						<a href="https://www.linkedin.com/in/victor-negron-742558235" target="_blank"  class="logo">Victor L Negron</a>
 					</header>
 
 				<!-- Nav -->
@@ -36,7 +36,7 @@
 						</ul>
 						<ul class="icons">
 							
-							<li><a href="https://www.linkedin.com/in/victor-negron-742558235" target="_blank" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.linkedin.com/in/victor-negron-742558235" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin/span></a></li>
 							<li><a href="https://github.com/VictorLNegron" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
