--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								software development skills and became a better problem solver. 
 								I love to see how things work and how they function together. I am looking forward to the opportunity to apply my skills in this industry.
 									I can't wait to discuss my skills and qualifications that I will bring to your organization as a software developer to make an impact. 
-									Please feel free to reach out to me at : email / phone.
+									Please feel free to reach out to me.
 									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/Victor.jpg" alt="" /></a>
